--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "backgroundColor": "#24180f",
+    // "backgroundColor": "#24180f", doesnt work with navigation. set background color in navigation
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
